Closed Bug 1015663 Opened 10 years ago Closed 10 years ago

Fix more bad implicit conversion constructors in the JS engine

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

      No description provided.
Assignee: nobody → ehsan
Blocks: explicit
Attachment #8428324 - Flags: review?(jorendorff)
ping?
Attachment #8428324 - Flags: review?(jorendorff) → review+
https://hg.mozilla.org/mozilla-central/rev/86195553d5e7
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: