Bug 1015663 - Fix more bad implicit conversion constructors in the JS engine; r=jorendorff

--HG--
extra : rebase_source : 98263097de3746be56f14771db660eb5308f62c9